--- a/ASPNETCoreBlog/ASPNETCoreBlog/Views/Shared/_BlogPostLayout.cshtml
+++ b/ASPNETCoreBlog/ASPNETCoreBlog/Views/Shared/_BlogPostLayout.cshtml
@@ -10,7 +10,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <cache expires-after="@TimeSpan.FromSeconds(cacheTimeInSeconds)">@await Component.InvokeAsync("DNSPrefetch")</cache>
-    <title>@ViewData["Title"] - <cache expires-after="@TimeSpan.FromSeconds(3)">@await Component.InvokeAsync("SiteName")</cache></title>
+    @RenderSection("MetaTags", false)
+    <title>@ViewData["Title"] - <cache expires-after="@TimeSpan.FromSeconds(cacheTimeInSeconds)">@await Component.InvokeAsync("SiteName")</cache></title>
     @await Component.InvokeAsync("WebsiteStyles")
     <cache expires-after="@TimeSpan.FromSeconds(cacheTimeInSeconds)">@await Component.InvokeAsync("Favicon")</cache>
     <cache expires-after="@TimeSpan.FromSeconds(cacheTimeInSeconds)">@await Component.InvokeAsync("CustomCSS")</cache>
