Blog functionality added

--- a/ASPNETCoreBlog/ASPNETCoreBlog/Views/_ViewImports.cshtml
+++ b/ASPNETCoreBlog/ASPNETCoreBlog/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using ASPNETCoreBlog
 @using ASPNETCoreBlog.Models
 @using ASPNETCoreBlog.ViewModels
+@using ASPNETCoreBlog.Helpers
 @using Markdig;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, ASPNETCoreBlog
