--- a/ASPNETCoreBlog/ASPNETCoreBlog/Views/Shared/_TagsLayout.cshtml
+++ b/ASPNETCoreBlog/ASPNETCoreBlog/Views/Shared/_TagsLayout.cshtml
@@ -22,7 +22,7 @@
         <nav class="navbar navbar-expand-lg py-3 bg-white fixed-top" aria-label="Demo 1">
             <div class="container">
                 <a href="/" class="navbar-brand">
-                    <cache expires-after="@TimeSpan.FromSeconds(cacheTimeInSeconds)">@await Component.InvokeAsync("SiteName")</cache>/a>
+                    <cache expires-after="@TimeSpan.FromSeconds(cacheTimeInSeconds)">@await Component.InvokeAsync("SiteName")</cache></a>
                 <button class="navbar-toggler"
                         type="button"
                         data-bs-toggle="collapse"
