--- a/ASPNETCoreBlog/ASPNETCoreBlog/Views/Shared/Components/SiteFooter/Default.cshtml
+++ b/ASPNETCoreBlog/ASPNETCoreBlog/Views/Shared/Components/SiteFooter/Default.cshtml
@@ -4,7 +4,7 @@
     <div class="container">
         @Html.Raw(Model)
         <div class="d-flex flex-column flex-sm-row justify-content-sm-between align-items-center gap-3 border-top py-3">
-            <div class="small"><a href="https://www.dojohaven.com/" target="_blank" rel="noopener">ASP.NET Core Blog System</a> &copy; 2011 - @DateTime.Now.Year </div>
+            <div class="small"><a href="/" target="_blank" rel="noopener">ASP.NET Core Blog System</a> &copy; @DateTime.Now.Year </div>
             <ul class="list-inline mb-0">
                 <li class="list-inline-item">
                     <a class="icon icon-sm icon-secondary" href="#"><i class="fab fa-twitter m-auto" aria-hidden="true"></i><span class="sr-only">Twitter</span></a>
