--- a/ASPNETCoreBlog/ASPNETCoreBlog/Views/Blog/Post.cshtml
+++ b/ASPNETCoreBlog/ASPNETCoreBlog/Views/Blog/Post.cshtml
@@ -89,7 +89,11 @@
 
                 <div class="justify-content-evenly">
                     <div class="text-center">
-                        @Html.Raw(ad1)
+                        <div class="card w-100">
+                            <div class="card-body p-4">
+                                @Html.Raw(ad1)
+                            </div>
+                        </div>
                     </div>
                 </div>
 
@@ -104,7 +108,11 @@
 
                 <div class="justify-content-evenly">
                     <div class="text-center">
-                        @Html.Raw(ad2)
+                        <div class="card w-100">
+                            <div class="card-body p-4">
+                                @Html.Raw(ad2)
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <br />
@@ -120,7 +128,11 @@
                 <br />
                 <div class="justify-content-evenly">
                     <div class="text-center">
-                        @Html.Raw(ad3)
+                        <div class="card w-100">
+                            <div class="card-body p-4">
+                                @Html.Raw(ad3)
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <br />
